still now working

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+html,
+body,
+header,
+#intro {
+  height: 100%;
+}
+
+#intro{
+  background-image: url("./Media/home.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -13,10 +28,23 @@ code {
     monospace;
 }
 
-.bg {
+.imagen {
   background-image: url("./Media/home.jpg");
-  height: 40vh;
+  height: 60vh;
   background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
+}
+
+.top-nav-collapse {
+  background-color: #24355C;
+}
+@media (max-width: 768px) {
+  .navbar:not(.top-nav-collapse) {
+    background-color: #24355C;
+  }
+}
+@media (min-width: 800px) and (max-width: 850px) {
+  .navbar:not(.top-nav-collapse) {
+    background-color: #24355C;
+  }
 }
